[gd_scene load_steps=29 format=3 uid="uid://divr04l50vppw"]

[ext_resource type="Texture2D" uid="uid://crmcwehtwe8eo" path="res://assets/world/grass.png" id="1_wgp2o"]
[ext_resource type="PackedScene" uid="uid://c4if563vdqfb" path="res://scenes/world/big_rock.tscn" id="2_nbd1h"]
[ext_resource type="Script" path="res://scripts/monuments_spawner.gd" id="3_loki5"]
[ext_resource type="PackedScene" uid="uid://dqqik74dpfhvf" path="res://scenes/world/small_rock.tscn" id="3_r2e6h"]
[ext_resource type="PackedScene" uid="uid://dtu6ahgd1jda3" path="res://scenes/world/flower.tscn" id="4_26d6p"]
[ext_resource type="Script" path="res://scripts/spawner.gd" id="4_d5jgv"]
[ext_resource type="PackedScene" uid="uid://b4etbcqy3rt7n" path="res://scenes/world/log.tscn" id="5_ywgp1"]
[ext_resource type="Script" path="res://scripts/radial_menu.gd" id="6_lhuss"]
[ext_resource type="PackedScene" uid="uid://biahjojqge6yi" path="res://scenes/world/bush.tscn" id="6_lxrgt"]
[ext_resource type="PackedScene" uid="uid://51lwhs82udsv" path="res://scenes/ui/summon_button.tscn" id="7_3qbdf"]
[ext_resource type="Theme" uid="uid://yu1dowvtkl7f" path="res://assets/ui/theme.tres" id="7_t471f"]
[ext_resource type="Texture2D" uid="uid://bb516liyi5nof" path="res://assets/summon_icons/turret_icon.png" id="8_cn56n"]
[ext_resource type="Texture2D" uid="uid://bdde7as7i33xy" path="res://assets/summon_icons/bomber_icon.png" id="9_3m3wj"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="9_80qbj"]
[ext_resource type="Script" path="res://scripts/souls_label.gd" id="10_3dof2"]
[ext_resource type="PackedScene" uid="uid://c7ylt42bmheo6" path="res://scenes/player.tscn" id="10_ikbc3"]
[ext_resource type="Texture2D" uid="uid://bo1cgc5udcsje" path="res://assets/summon_icons/roller_icon.png" id="10_ng61e"]
[ext_resource type="Script" path="res://scripts/points_label.gd" id="14_4dami"]
[ext_resource type="Texture2D" uid="uid://cenbpcnaje64m" path="res://assets/creatures/sword_summon.png" id="14_snsmg"]
[ext_resource type="AudioStream" uid="uid://b2qe7qw7bdg0a" path="res://assets/audio/summonings.mp3" id="20_0mus1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fotqp"]
size = Vector2(100, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y87is"]
size = Vector2(100, 1920)

[sub_resource type="Animation" id="Animation_kjypw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_gbq3t"]
resource_name = "fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vagu1"]
_data = {
"RESET": SubResource("Animation_kjypw"),
"fade_out": SubResource("Animation_gbq3t")
}

[sub_resource type="Animation" id="Animation_ofcgt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/SoulsCollectedLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/OfferingsMadeLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/EnemiesScoreLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/TimeBonusLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer/ScoreLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VBoxContainer/SoulsCollectedLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("VBoxContainer/OfferingsMadeLabel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("VBoxContainer/EnemiesScoreLabel:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("VBoxContainer/TimeBonusLabel:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("VBoxContainer/ScoreLabel:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("VBoxContainer/RestartLabel:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("VBoxContainer/RestartLabel:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("VBoxContainer/GameOverLabel:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("VBoxContainer/GameOverLabel:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_50s5x"]
resource_name = "death_ui"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/SoulsCollectedLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/OfferingsMadeLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/EnemiesScoreLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/TimeBonusLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 5.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer/ScoreLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 6.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("VBoxContainer/SoulsCollectedLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2.6, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("VBoxContainer/OfferingsMadeLabel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(3.6, 4.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("VBoxContainer/EnemiesScoreLabel:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(4.6, 5.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("VBoxContainer/TimeBonusLabel:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(5.6, 6.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("VBoxContainer/ScoreLabel:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(6.6, 7.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("VBoxContainer/RestartLabel:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 7.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("VBoxContainer/RestartLabel:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(7.6, 8.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("VBoxContainer/GameOverLabel:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("VBoxContainer/GameOverLabel:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kavnu"]
_data = {
"RESET": SubResource("Animation_ofcgt"),
"death_ui": SubResource("Animation_50s5x")
}

[node name="Scene" type="Node2D"]
y_sort_enabled = true
texture_filter = 1

[node name="BG" type="Sprite2D" parent="."]
z_index = -1
texture_repeat = 2
scale = Vector2(4, 4)
texture = ExtResource("1_wgp2o")
region_enabled = true
region_rect = Rect2(2.08165e-12, 2.08165e-12, 480, 270)

[node name="WorldObjects" type="Node2D" parent="."]
y_sort_enabled = true
scale = Vector2(4, 4)

[node name="BigRock" parent="WorldObjects" instance=ExtResource("2_nbd1h")]
position = Vector2(-70.5, 66.25)

[node name="SmallRock" parent="WorldObjects" instance=ExtResource("3_r2e6h")]

[node name="Flower" parent="WorldObjects" instance=ExtResource("4_26d6p")]
position = Vector2(107.75, -43.25)

[node name="Flower2" parent="WorldObjects" instance=ExtResource("4_26d6p")]
position = Vector2(111.5, -51.5)

[node name="Flower3" parent="WorldObjects" instance=ExtResource("4_26d6p")]
position = Vector2(117.75, -42)

[node name="Log" parent="WorldObjects" instance=ExtResource("5_ywgp1")]
position = Vector2(92.5, -9)

[node name="Bush" parent="WorldObjects" instance=ExtResource("6_lxrgt")]
position = Vector2(81.5, -30.5)

[node name="Bush2" parent="WorldObjects" instance=ExtResource("6_lxrgt")]
position = Vector2(97.75, -23.75)

[node name="Bush3" parent="WorldObjects" instance=ExtResource("6_lxrgt")]
position = Vector2(160, -85)

[node name="Bush4" parent="WorldObjects" instance=ExtResource("6_lxrgt")]
position = Vector2(149, -74.75)

[node name="Bush5" parent="WorldObjects" instance=ExtResource("6_lxrgt")]
position = Vector2(168.25, -70.5)

[node name="Bounds" type="Node2D" parent="."]

[node name="BoundaryLeft" type="StaticBody2D" parent="Bounds"]
position = Vector2(-960, 2.08165e-12)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/BoundaryLeft"]
shape = SubResource("RectangleShape2D_fotqp")

[node name="BoundaryRight" type="StaticBody2D" parent="Bounds"]
position = Vector2(960, 2.08165e-12)
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/BoundaryRight"]
shape = SubResource("RectangleShape2D_fotqp")

[node name="BoundaryTop" type="StaticBody2D" parent="Bounds"]
position = Vector2(2.08165e-12, -540)
rotation = 1.5708
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/BoundaryTop"]
shape = SubResource("RectangleShape2D_y87is")

[node name="BoundaryBottom" type="StaticBody2D" parent="Bounds"]
position = Vector2(2.08165e-12, 540)
rotation = 1.5708
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/BoundaryBottom"]
shape = SubResource("RectangleShape2D_y87is")

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("4_d5jgv")

[node name="Timer" type="Timer" parent="Spawner"]
autostart = true

[node name="Monuments" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("3_loki5")

[node name="RadialMenu" type="Node2D" parent="."]
visible = false
z_index = 999
script = ExtResource("6_lhuss")

[node name="SummonTurret" parent="RadialMenu" instance=ExtResource("7_3qbdf")]
position = Vector2(1.43099e-06, -120)
creature_icon = ExtResource("8_cn56n")
cost = 10

[node name="SummonBomber" parent="RadialMenu" instance=ExtResource("7_3qbdf")]
position = Vector2(-120, -1.04907e-05)
creature_name = "Bomber"
creature_scene = "bomber"
creature_icon = ExtResource("9_3m3wj")

[node name="SummonRoller" parent="RadialMenu" instance=ExtResource("7_3qbdf")]
position = Vector2(-5.24537e-06, 120)
creature_name = "Roller"
creature_scene = "roller"
creature_icon = ExtResource("10_ng61e")
cost = 5

[node name="SummonSword" parent="RadialMenu" instance=ExtResource("7_3qbdf")]
position = Vector2(120, 0)
creature_name = "Enchanted Blade"
creature_scene = "sword"
creature_icon = ExtResource("14_snsmg")
cost = 1

[node name="Player" parent="." instance=ExtResource("10_ikbc3")]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("9_80qbj")

[node name="HSeparator" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -134.0
offset_right = 156.0
offset_bottom = -40.0
grow_vertical = 0

[node name="PointsLabel" type="Label" parent="UI/HSeparator"]
layout_mode = 2
offset_top = 4.0
offset_right = 120.0
offset_bottom = 36.0
theme = ExtResource("7_t471f")
text = "POINTS"
script = ExtResource("14_4dami")

[node name="SoulsLabel" type="Label" parent="UI/HSeparator"]
layout_mode = 2
offset_top = 60.0
offset_right = 120.0
offset_bottom = 92.0
theme = ExtResource("7_t471f")
text = "SOULS"
script = ExtResource("10_3dof2")

[node name="Overlay" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Overlay"]
libraries = {
"": SubResource("AnimationLibrary_vagu1")
}
autoplay = "fade_out"

[node name="DeathUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/DeathUI"]
libraries = {
"": SubResource("AnimationLibrary_kavnu")
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DeathUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.5
offset_top = -22.5
offset_right = 204.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="GameOverLabel" type="Label" parent="UI/DeathUI/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("7_t471f")
theme_override_font_sizes/font_size = 120
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoulsCollectedLabel" type="Label" parent="UI/DeathUI/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("7_t471f")
theme_override_font_sizes/font_size = 48
text = "30 SOULS COLLECTED"
horizontal_alignment = 1

[node name="OfferingsMadeLabel" type="Label" parent="UI/DeathUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_t471f")
theme_override_font_sizes/font_size = 48
text = "10  OFFERINGS MADE"
horizontal_alignment = 1

[node name="EnemiesScoreLabel" type="Label" parent="UI/DeathUI/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("7_t471f")
theme_override_font_sizes/font_size = 48
text = "+100 KILL BONUS"
horizontal_alignment = 1

[node name="TimeBonusLabel" type="Label" parent="UI/DeathUI/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("7_t471f")
theme_override_font_sizes/font_size = 48
text = "+ 10 TIME BONUS"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI/DeathUI/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("7_t471f")
theme_override_font_sizes/font_size = 96
text = "120 PTS"
horizontal_alignment = 1

[node name="RestartLabel" type="Label" parent="UI/DeathUI/VBoxContainer"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("7_t471f")
theme_override_font_sizes/font_size = 48
text = "
PRESS [R] TO RESTART"
horizontal_alignment = 1

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_0mus1")
volume_db = -12.0
autoplay = true

[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
[connection signal="animation_finished" from="UI/Overlay/AnimationPlayer" to="UI" method="_on_animation_player_animation_finished"]
